@@ -236,7 +236,7 @@ screenshot_sanitize_filename (const char *filename)
   g_assert (filename);
   g_assert (g_utf8_validate (filename, -1, NULL));
 
-  retval = g_strdup (filename);
+  retval = gnome_vfs_escape_host_and_path_string (filename);
 
   for (p = retval; *p != '\000'; p = g_utf8_next_char (p))
     {
